--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
     "name": "cordova-plugin-powermanagement-orig",
-    "version": "1.1.2",
+    "version": "1.1.2-sensara.1",
     "description": "Plugin for managing the power state (i.e. idle switching) for cordova 3.0+. The original one.",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Viras-/cordova-plugin-powermanagement.git"
+        "url": "git+https://github.com/sensara-eu/cordova-plugin-powermanagement.git"
     },
     "author": "Viras-",
     "license": "Apache-2.0",
     "bugs": {
-        "url": "https://github.com/Viras-/cordova-plugin-powermanagement/issues"
+        "url": "https://github.com/sensara-eu/cordova-plugin-powermanagement/issues"
     },
-    "homepage": "https://github.com/Viras-/cordova-plugin-powermanagement#readme",
+    "homepage": "https://github.com/sensara-eu/cordova-plugin-powermanagement#readme",
     "keywords": [
         "ecosystem:cordova",
         "cordova-android",
